crates/pixi_build_cmake/src/snapshots/pixi_build_cmake__tests__input_globs_includes_extra_globs.snap
---
source: crates/pixi_build_cmake/src/main.rs
expression: result
---
Ok(
    [
        "**/*.{c,cc,cxx,cpp,h,hpp,hxx}",
        "**/*.{cmake,cmake.in}",
        "**/CMakeLists.txt",
        "custom/*.c",
    ],
)
